# cts-bq-ml-demo

./: .gitgnore  .gitignore  .pre-commit-config.yaml  README.md  cookiecutter.json
.devcontainer/: Dockerfile  devcontainer.json
hooks/: post_gen_project  post_gen_project.py  post_gen_project.sh  pre_gen_project.py
{{ cookiecutter.project_name }}/: .gitgnore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
{{ cookiecutter.project_name }}/.devcontainer/: README.md  devcontainer.json
{{ cookiecutter.project_name }}/.github/workflows/: cruft-update.yml
{{ cookiecutter.project_name }}/infra/: apis.tf  bigquery_job.tf  bq_cross_region_xfer.tf  datasets.tf  locals.tf  providers.tf  tables.tf  variables.tf
{{ cookiecutter.project_name }}/infra/config/: bigquery.yaml
{{ cookiecutter.project_name }}/infra/config/defs/: billing_archive.json  excluded_skus.json  joint_master_query.sql  vw_liquor_sales.sql  vw_liquor_sales_5_liquors_filled_days.sql
{{ cookiecutter.project_name }}/metadata/main_dags/: test_dag.json
{{ cookiecutter.project_name }}/pipelines/airflow-local-setup/: kind-cluster.yaml
{{ cookiecutter.project_name }}/pipelines/dags/main_ingestion_operator/: load_data_into_bq.py  main_schema_definitions.py
{{ cookiecutter.project_name }}/terraform_cdk/: generate_tag_templates.py
